--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Web Developer Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h3>Mary</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="Blogs"></a>Blogs</li>
+                <li><a href=""><button>Hire me</button></a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
