--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Web Developer Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,900;1,700&family=Open+Sans:wght@400;700;800&family=Poppins:wght@300;400;500;600&family=Rubik+Iso&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <h3>Mary</h3>
+            <h3 class="navtitle">Ma <span class="text-orange">
+                r
+            </span>y</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
-                <li><a href="Blogs"></a>Blogs</li>
-                <li><a href=""><button>Hire me</button></a></li>
+                <li><a href=""></a>Blogs</li>
+                <li><a href=""><button class="btn-primary">Hire me</button></a></li>
             </ul>
         </nav>
     </header>
