--- a/index.html
+++ b/index.html
@@ -37,6 +37,56 @@
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
         </section>
+        <div class="info-container">
+            <!-- .about-info*4>h4.info-title+p.info-description -->
+            <div class="about-info">
+                <h4 class="info-title">Name:
+                    </h4>
+                <p class="info-description"> Mary Hardy</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">Email:
+                   </h4>
+                <p class="info-description"> info@gmail.com</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">Date of birth:
+                    </h4>
+                <p class="info-description">11 November 1987</p>
+       
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">From:
+                    </h4>
+                <p class="info-description">Los Angeles, USA</p>
+            </div>
+        </div>
+        <!-- what i do section -->
+        <section>
+            <h3 class="section-title">What I do</h3>
+            <p id="section-description-wid" class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skill-container">
+                <img src="portfolio-resources/images/icons/js.png
+                " alt="" class="logo">
+                <h3 class="section-title"></h3>
+                <p class="section-description"></p>
+            </div>
+            <div class="skill-container">
+                <img src="portfolio-resources/images/icons/react.png" alt="" class="logo">
+                <h3 class="section-title"></h3>
+                <p class="section-description"></p>
+            </div>
+            <div class="skill-container">
+                <img src="portfolio-resources/images/icons/nodejs.png" alt="" class="logo">
+                <h3 class="section-title"></h3>
+                <p class="section-description"></p>
+            </div>
+            <div class="skill-container">
+                <img src="portfolio-resources/images/icons/mongo.png" alt="" class="logo">
+                <h3 class="section-title"></h3>
+                <p class="section-description"></p>
+            </div>
+        </section>
     </main>
     <footer>
 
