--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,17 @@
     <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,900;1,700&family=Open+Sans:wght@400;700;800&family=Poppins:wght@300;400;500;600&family=Rubik+Iso&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,900;1,700&family=Open+Sans:wght@400;700;800&family=Poppins:wght@300;400;500;600&family=Rubik+Iso&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav>
             <h3 class="navtitle">Ma <span class="text-orange">
-                r
-            </span>y</h3>
+                    r
+                </span>y</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href=""></a>Blogs</li>
@@ -22,12 +26,13 @@
             </ul>
         </nav>
         <div class="banner">
-            <div class="banner-content" >
-               <h3 class="banner-greetings">Hi, I  am</h3>
-               <h1 class="banner-title">Mary Hardy</h1>
-              <p class="banner-para">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-              <button class="btn-primary">Download CV</button>
-              <button class="btn-secondary">Contact</button>
+            <div class="banner-content">
+                <h3 class="banner-greetings">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-para">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                    because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-secondary">Contact</button>
             </div>
             <img src="portfolio-resources/images/hardy.png" alt="">
         </div>
@@ -35,56 +40,119 @@
     <main>
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
         </section>
         <div class="info-container">
             <!-- .about-info*4>h4.info-title+p.info-description -->
             <div class="about-info">
                 <h4 class="info-title">Name:
-                    </h4>
+                </h4>
                 <p class="info-description"> Mary Hardy</p>
             </div>
             <div class="about-info">
                 <h4 class="info-title">Email:
-                   </h4>
+                </h4>
                 <p class="info-description"> info@gmail.com</p>
             </div>
             <div class="about-info">
                 <h4 class="info-title">Date of birth:
-                    </h4>
+                </h4>
                 <p class="info-description">11 November 1987</p>
-       
+
             </div>
             <div class="about-info">
                 <h4 class="info-title">From:
-                    </h4>
+                </h4>
                 <p class="info-description">Los Angeles, USA</p>
             </div>
         </div>
         <!-- what i do section -->
         <section>
             <h3 class="section-title">What I do</h3>
-            <p id="section-description-wid" class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
-            <div class="skill-container">
-                <img src="portfolio-resources/images/icons/js.png
+            <p id="section-description-wid" class="section-description">I have more than 10 years experience building
+                software for clients all over the world. Below is a quick overview of my main technical skill sets and
+                technologies i use. Want to find out more about my experience? Check out my online resume and project
+                portfolio.</p>
+            <div class="skills-container">
+                <div class="skills">
+                    <img src="portfolio-resources/images/icons/js.png
                 " alt="" class="logo">
-                <h3 class="section-title"></h3>
-                <p class="section-description"></p>
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="portfolio-resources/images/icons/react.png" alt="" class="logo">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="portfolio-resources/images/icons/nodejs.png" alt="" class="logo">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="portfolio-resources/images/icons/mongo.png" alt="" class="logo">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
             </div>
-            <div class="skill-container">
-                <img src="portfolio-resources/images/icons/react.png" alt="" class="logo">
-                <h3 class="section-title"></h3>
-                <p class="section-description"></p>
+        </section>
+        <section>
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-container">
+
+
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <hr>
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <hr>
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience </h3>
+                    <h2 class="resume-item-title">Sr. Font End Developer
+
+                    </h2>
+                    <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <hr>
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <hr>
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
             </div>
-            <div class="skill-container">
-                <img src="portfolio-resources/images/icons/nodejs.png" alt="" class="logo">
-                <h3 class="section-title"></h3>
-                <p class="section-description"></p>
+            <div class="cv-btn">
+                <button class="btn-primary" >Download CV</button>
             </div>
-            <div class="skill-container">
-                <img src="portfolio-resources/images/icons/mongo.png" alt="" class="logo">
-                <h3 class="section-title"></h3>
-                <p class="section-description"></p>
+           
             </div>
         </section>
     </main>
@@ -92,4 +160,5 @@
 
     </footer>
 </body>
+
 </html>
