--- a/index.html
+++ b/index.html
@@ -150,14 +150,33 @@
                 </div>
             </div>
             <div class="cv-btn">
-                <button class="btn-primary" >Download CV</button>
+                <button class="btn-primary">Download CV</button>
             </div>
-           
+
             </div>
         </section>
     </main>
     <footer>
-
+        <div class="footer-colun">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between
+                9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-links">
+                <a href=""><img src="portfolio-resources/images/icons/facebook.png" alt="" class="social-icon">
+                </a>
+                <a href=""><img src="portfolio-resources/images/icons/insta.png" alt="" class="social-icon">
+                </a>
+                <a
+                    href=""><img src="portfolio-resources/images/icons/twitter.png" alt="" class="social-icon">
+                </a></div>
+        </div>
+        <div class="footer-colun">
+            <h3 class="section-title"> Message me</h3>
+            <form action=""><input type="email" placeholder="your email">
+                <input type="text" placeholder="your name">
+            </form>
+            <textarea name="" id="" cols="30" rows="5" placeholder="massage me"></textarea>
+        </div>
     </footer>
 </body>
 
