--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </section>
     </main>
     <footer>
-        <div class="footer-colun">
+        <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
             <p class="section-description">Please fill out the form on this section to contact with me or call between
                 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
@@ -170,12 +170,16 @@
                     href=""><img src="portfolio-resources/images/icons/twitter.png" alt="" class="social-icon">
                 </a></div>
         </div>
-        <div class="footer-colun">
+        <div class="footer-column" id="contact">
             <h3 class="section-title"> Message me</h3>
-            <form action=""><input type="email" placeholder="your email">
-                <input type="text" placeholder="your name">
+            
+            <form action="" class="contact">
+                <input type="email" placeholder="your email"><br>
+                <input type="text" placeholder="your name"><br>
             </form>
             <textarea name="" id="" cols="30" rows="5" placeholder="massage me"></textarea>
+            <input type="submit" value="submit" class="btn-primary">
+       
         </div>
     </footer>
 </body>
