--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,900;1,700&family=Open+Sans:wght@400;700;800&family=Poppins:wght@300;400;500;600&family=Rubik+Iso&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/af18d1a71f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -31,8 +32,9 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-para">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
                     because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-secondary">Contact</button>
+                <button class="btn-primary">
+                    <i class="fa-solid fa-download"></i>Download CV</button>
+                <button class="btn-secondary"><i class="fa-solid fa-phone"></i>Contact</button>
             </div>
             <img src="portfolio-resources/images/hardy.png" alt="">
         </div>
@@ -150,7 +152,7 @@
                 </div>
             </div>
             <div class="cv-btn">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>Download CV</button>
             </div>
 
             </div>
